test/impureType.psi
// compilation error

def foo(g: ğŸ™â†’â„•): (â„•^g())[] â‡’ (); // error
def bar(g: ğŸ™â†’pure â„•): (â„•^g())[] â‡’ (); // ok

def main(){
	x:=vector(uniformInt(0,3) coerce â„•, 0); // error
	y:=vector(uniformInt(0,3) coerce â„•, 0); // error
	observe(x.length!=y.length);
	return x.length==y.length;
}
